--- a/project/templates/eoi_candidate.html
+++ b/project/templates/eoi_candidate.html
@@ -47,11 +47,11 @@
 
   // Your web app's Firebase configuration
   const firebaseConfig = {
-    apiKey: "AIzaSyDMRV1SqGWXWWHblOI1eGPjNMhwrzl5iUg",
-    authDomain: "electronicvoting-56d81.firebaseapp.com",
-    projectId: "electronicvoting-56d81",
-    storageBucket: "electronicvoting-56d81.appspot.com"
-  };
+            apiKey: "AIzaSyAMQjEmw7Wpkqb9KlPSg__6taL5_B25Dg0",
+            authDomain: "pollpal-c62d2.firebaseapp.com",
+            projectId: "pollpal-c62d2",
+            storageBucket: "pollpal-c62d2.appspot.com"
+        };
 
   // Initialize Firebase
   const app = firebase.initializeApp(firebaseConfig);
