--- a/project/templates/home_page_contact.html
+++ b/project/templates/home_page_contact.html
@@ -31,13 +31,12 @@
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
 
 <script>
-    const firebaseConfig = {
-        apiKey: "AIzaSyDMRV1SqGWXWWHblOI1eGPjNMhwrzl5iUg",
-        authDomain: "electronicvoting-56d81.firebaseapp.com",
-        projectId: "electronicvoting-56d81",
-        storageBucket: "electronicvoting-56d81.appspot.com"
-    };
-
+  const firebaseConfig = {
+            apiKey: "AIzaSyAMQjEmw7Wpkqb9KlPSg__6taL5_B25Dg0",
+            authDomain: "pollpal-c62d2.firebaseapp.com",
+            projectId: "pollpal-c62d2",
+            storageBucket: "pollpal-c62d2.appspot.com"
+        };
     // Initialize Firebase
     const app = firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
